# scourgify

./: .gitignore  CLAUDE.md  LICENSE  README.md  ao3_import.py  apply_char_fixes.py  apply_more.py  apply_other.py  apply_recents.py  apply_relationships.py  apply_tropes.py  build_ao3_layer.py  build_classify_seed.py  build_defaults.py  classify.py  common.py  config.toml  generate_followups.py  generate_maps.py  pyproject.toml  recover_xianxia.py  requirements.txt  staleness.py  ui.py  wizard.py  wrangle.py
.github/workflows/: ci.yml  publish.yml
attic/: README.md  apply.py  apply_asciitags.py  apply_char_fixes.py  apply_fff_config.py  apply_more.py  apply_other.py  apply_recents.py  apply_relationships.py  apply_tropes.py  dryrun.py  fff_status_writable.py  generate_followups.py  generate_maps.py  recover_xianxia.py
defaults/: characters.csv  decompose.csv  fandoms.csv  genres_allow.txt  genres_canon.csv  ratings.txt  tropes.csv
docs/superpowers/plans/: 2026-07-06-tag-promotion.md
docs/superpowers/specs/: 2026-07-06-sequential-step-review-design.md  2026-07-06-tag-promotion-workflow-design.md  2026-07-11-centralized-config-design.md
src/scourgify/: __init__.py  __main__.py  _writer.py  afm.swift  classify.py  cli.py  common.py  overrides.py  promote.py  select.py  staleness.py  ui.py  wizard.py  wrangle.py
src/scourgify/defaults/: ao3_exceptions.txt  characters.csv  classify_vocab.txt  classify_vocab_ao3.txt  fandom_blocklist.txt  fandoms.csv  genres_allow.txt  genres_split.csv  junk.txt  tropes.csv
src/scourgify/defaults/ao3/: characters.csv  genres.csv  tags.csv  universes.csv
tests/: fixture_db.py  test_backup.py  test_cli.py  test_core.py  test_layers.py  test_paths.py  test_promote.py  test_selection.py  test_wizard.py
