[project]
name = "scourgify"
dynamic = ["version"]
description = "Normalize and consolidate tags/fandoms/characters/genres in a FanFicFare-imported Calibre library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andrei Lavrenov", email = "andrei@lav.ren" }]
keywords = [
    "calibre",
    "fanfiction",
    "fanficfare",
    "ebook",
    "metadata",
    "tags",
    "normalization",
    "epub",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/elfensky/scourgify"
Repository = "https://github.com/elfensky/scourgify"
Issues = "https://github.com/elfensky/scourgify/issues"

[project.scripts]
scourgify = "scourgify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/scourgify/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scourgify"]
# The compiled Apple-FM bridge (`afm`) is a platform-specific binary built locally
# from afm.swift — never ship it in the universal wheel. (afm.swift itself ships.)
exclude = ["**/afm", "**/__pycache__"]

# TestPyPI as a named publish target. `explicit = true` keeps it out of normal
# dependency resolution — it is only ever used via `uv publish --index testpypi`.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Bandit security scan (run: `bandit -c pyproject.toml -r src/scourgify`). The skipped
# checks were each reviewed and are safe for this tool's threat model — a single-user,
# local CLI with NO network/web input surface (the only inputs are the user's own Calibre
# metadata.db and their own override files; there is no attacker-controlled input):
#   B404/B603/B607 — subprocess: fixed argv lists to trusted tools (calibre-debug,
#                    ebook-convert, swift, the local afm binary); never shell=True.
#   B310           — urllib: hardcoded https:// LLM-API endpoint literals; the scheme is
#                    constant, so file:/custom-scheme abuse is impossible.
#   B608           — SQL: queries interpolate only `?,?,?` placeholders (values bound as
#                    params) or a schema-derived integer column id — never user text.
#   B112           — the try/except/continue in calibre_open() is a best-effort pgrep/ps
#                    probe that intentionally falls through and fails CLOSED (see the code).
[tool.bandit]
skips = ["B404", "B603", "B607", "B310", "B608", "B112"]
